<resources>
    <string name="app_name">Car Rental Application</string>
    <string name="cars">Cars</string>
    <string name="customers">Customers</string>
    <string name="carModels">Car Model</string>
    <string name="brunch">Branch</string>
    //menu
    <string name="home">home page</string>
    <string name="carsMenu">Cars</string>
    <string name="addCarsMenu">Add Cars</string>
    <string name="getCarsMenu">Get Cars</string>
    <string name="customersMenu">Customers</string>
    <string name="addCustomersMenu">Add Customers</string>
    <string name="getCustomersMenu">Get Customers</string>
    <string name="carModelsMenu">Car Model</string>
    <string name="addCarModelMenu">Add Car Model</string>
    <string name="getCarModelMenu">Get Car Model</string>
    <string name="brunchMenu">Branches</string>
    <string name="GetBrunchMenu">Get Branches</string>
    //cars
    <string name="addCar">Add Cars</string>
    <string name="getCars">Get Cars</string>
    //add car
    <string name="brunchNum">brunch numbuer</string>
    <string name="model">model number</string>
    <string name="kilometrrs">kilometers</string>
    <string name="carNum">car number</string>
    <string name="OK_addCar">Add car</string>
    //Branch
    <string name="getBranch">Get Branch</string>
    //getBranch
    <string name="address">Address</string>
    <string name="branchNum">Number</string>
    <string name="place">Parking Space</string>
    //Customer
    <string name="addCustomer">Add Customer</string>
    <string name="isExistCusomer">is Exist Cusomer ?</string>
    <string name="getCustomer"> Get Custumer </string>
    //add Customer
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="id">ID</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="email">E-mail</string>
    <string name="creditCard">Credit card</string>
    <string name="OK_addCostumer">Add costumer</string>
    //is Exsits
    <string name="answer">answer is: </string>
    //Model car
    <string name="addModel">Add model</string>
    <string name="code">Code</string>
    <string name="Company">Company</string>
    <string name="modelName">Model</string>
    <string name="engineCapacity">Engine Capacity</string>
    <string-array name="gear">
        <item>AUTOMATIC</item>
        <item>MANUAL</item>
    </string-array>
    <string name="seats">Seats </string>
    <string name="OK_addModel">Add Model</string>
    <string name="OK_searchCustomer"> Search Cusromer </string>
    <string name="getModel">Get Model</string>
    <string name="title_activity_login2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


</resources>
