<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.carrentalapplication.controller.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstNameView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/firstName"
            />
        <TextView
            android:id="@+id/lastNameView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/lastName"
            />
        <TextView
            android:id="@+id/idView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            />
        <TextView
            android:id="@+id/phoneNumberView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber"
            />
        <TextView
            android:id="@+id/emailView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            />
        <TextView
            android:id="@+id/creditCardView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/creditCard"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>