<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.carrentalapplication.controller.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/codeView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/code"
            />
        <TextView
            android:id="@+id/companyView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/Company"
            />
        <TextView
            android:id="@+id/modelView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/modelName"
            />
        <TextView
            android:id="@+id/engineCapacityView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/engineCapacity"
            />
        <TextView
            android:id="@+id/gearView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="gear"
            />
        <TextView
            android:id="@+id/seatsView"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:text="@string/seats"
            />
    </LinearLayout>
    </android.support.constraint.ConstraintLayout>